Added scroll class

--- a/css/styles.css
+++ b/css/styles.css
@@ -188,3 +188,13 @@ h2 {
     width:100px;
     height:100px;
 }
+
+.scroll {
+    overflow: auto;
+    -webkit-overflow-scrolling: touch;
+    position: absolute;
+    top: 84px;
+    bottom: 0px;
+    left: 0px;
+    right: 0px;
+}
